chore: improve API
